--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-adk>=1.18.0",
-    "numpy>=2.3.5",
+    "google-genai>=0.3.0",
+    "streamlit>=1.24.0",
+    "python-dotenv>=1.0.0",
 ]
+
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
